@@ -1,5 +1,11 @@
 2012-07-03  H.J. Lu  <hongjiu.lu@intel.com>
 
+	PR binutils/14319
+	* elf.c (_bfd_elf_make_section_from_shdr): Don't compress empty
+	debug section.
+
+2012-07-03  H.J. Lu  <hongjiu.lu@intel.com>
+
 	PR ld/3351
 	* elflink.c (_bfd_elf_update_dynamic_flags): New.
 	(_bfd_elf_merge_symbol): Update both real and indirect symbol
